remove async operation to reduce complexity and enforce consistency before run